# thedaily

./: .gitignore  DEPLOYMENT.md  INITIALINSTRUCTION.md  PLAN.MD  README.md  app.py  pyproject.toml  run_pipeline.py
.github/workflows/: deploy-pages.yml
agents/: graph.py  responder.py  retrieval.py  synthesis.py
config/: settings.py
deploy/ec2/: bootstrap_ec2.sh  nginx-thedaily.conf  thedaily-pipeline.service  thedaily-pipeline.timer  thedaily-streamlit.service  thedaily.env.example
docs/: index.html
pipeline/: cleaner.py  index_builder.py  insights.py  processor.py
scraper/: hn_scraper.py
ui/: charts.py  chat.py  sidebar.py
